# Hellground_core

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
dep/include/g3dlite/G3D/: platform.h
sql/: characters.sql  realmd.sql
src/: CMakeLists.txt
src/framework/: CMakeLists.txt
src/game/: CMakeLists.txt  GMTicketMgr.cpp  ObjectAccessor.cpp  ObjectAccessor.h  ObjectMgr.h  ScriptLoader.cpp  ScriptedCreature.cpp  ScriptedPch.h  World.cpp  World.h  WorldSession.h
src/game/AI/: ScriptedEscortAI.cpp
src/game/Anticheat/WardenAnticheat/: Warden.cpp  Warden.h  WardenChat.h  WardenDataStorage.cpp  WardenMac.cpp  WardenMac.h  WardenWin.cpp  WardenWin.h
src/game/Chat/: Chat.cpp
src/game/Commands/: Level1.cpp  Level2.cpp
src/game/Guild/: GuildMgr.h
src/game/Handlers/: LFGHandler.cpp  TicketHandler.cpp
src/game/Maps/: GridMap.cpp  Map.cpp  Map.h  MoveMap.h  PathFinder.cpp
src/game/Movement/: MotionMaster.cpp
src/game/Movement/spline/: MoveSpline.cpp  MoveSpline.h  MoveSplineInit.cpp  MoveSplineInit.h  spline.h  typedefs.h
src/game/Objects/: Creature.cpp  Object.cpp  Player.cpp  Unit.cpp  Unit.h
src/game/Protocol/: WorldSocket.cpp
src/game/vmap/: WorldModel.cpp  WorldModel.h
src/hellgroundcore/: CMakeLists.txt  CliRunnable.cpp
src/hellgroundrealm/: CMakeLists.txt
src/mangosd/: CMakeLists.txt  CliRunnable.cpp  Main.cpp  Master.cpp
src/realmd/: AuthSocket.cpp  Main.cpp
src/scripts/: CMakeLists.txt
src/scripts/Eastern Kingdoms/blackrock_depths/: boss_coren_direbrew.cpp  instance_blackrock_depths.cpp
src/scripts/Eastern Kingdoms/gnomeregan/: gnomeregan.cpp
src/scripts/Eastern Kingdoms/karazhan/: boss_netherspite.cpp  bosses_opera.cpp
src/scripts/Eastern Kingdoms/magisters_terrace/: boss_selin_fireheart.cpp  boss_vexallus.cpp
src/scripts/Eastern Kingdoms/redridge/: redridge.cpp
src/scripts/Eastern Kingdoms/stratholme/: instance_stratholme.cpp
src/scripts/Eastern Kingdoms/sunken_temple/: sunken_temple.cpp
src/scripts/Eastern Kingdoms/sunwell_plateau/: boss_kiljaeden.cpp  instance_sunwell_plateau.cpp
src/scripts/Eastern Kingdoms/zulaman/: boss_janalai.cpp  boss_nalorakk.cpp
src/scripts/Kalimdor/azuremyst_isle/: azuremyst_isle.cpp
src/scripts/Kalimdor/caverns_of_time/hyjal/: hyjal.cpp
src/scripts/Kalimdor/caverns_of_time/old_hillsbrad/: instance_old_hillsbrad.cpp
src/scripts/Kalimdor/darkshore/: darkshore.cpp
src/scripts/Kalimdor/maraudon/: maraudon.cpp
src/scripts/Kalimdor/razorfen_kraul/: instance_razorfen_kraul.cpp
src/scripts/Outland/black_temple/: boss_illidan.cpp  instance_black_temple.cpp
src/scripts/Outland/blades_edge_mountains/: shartuul.cpp
src/scripts/Outland/coilfang_resevoir/slave_pens/: boss_lord_ahune.cpp  boss_mennu_the_betrayer.cpp
src/scripts/Outland/hellfire_citadel/blood_furnace/: instance_blood_furnace.cpp
src/scripts/Outland/netherstorm/: netherstorm.cpp
src/scripts/Outland/tempest_keep/the_eye/: boss_kaelthas.cpp
src/scripts/boss/: HoggerThe.cpp
src/scripts/include/: escort_ai.cpp  follower_ai.cpp  sc_creature.cpp
src/scripts/scripts/Eastern Kingdoms/alterac_mountains/: alterac_mountains.cpp
src/scripts/scripts/Eastern Kingdoms/arathi_highlands/: arathi_highlands.cpp
src/scripts/scripts/Eastern Kingdoms/blackrock_depths/: blackrock_depths.cpp
src/scripts/scripts/Eastern Kingdoms/blackwing_lair/: boss_victor_nefarius.cpp
src/scripts/scripts/Eastern Kingdoms/eastern_plaguelands/: eastern_plaguelands.cpp
src/scripts/scripts/Eastern Kingdoms/ghostlands/: ghostlands.cpp
src/scripts/scripts/special/: custom_example.cpp  npc_professions.cpp  npcs_special.cpp
src/scripts/special/: item_scripts.cpp
src/shared/: CMakeLists.txt  Errors.h  revision.h
src/shared/Auth/: Hmac.cpp  Hmac.h
src/shared/Database/: DatabaseMysql.h
(+67 files in other folders)
